# ai-agents-playground

./: .gitignore  README.md  connect_mcp.ipynb  langgraph.json  local_run.ipynb  main.py  pyproject.toml  run_sim_mcp_server.py  store_sim_agent.ipynb
excel_analyzer/: agent.py  downloader.py
llm/: gigachat.py
mcp_server/: __init__.py  server.py
simple_agent/: agent.py
store_sim/agent/: agent.py
store_sim/mcp/: __init__.py  server.py
store_sim_mcp/: db.py  server.py
tests/: test_store_sim_mcp.py
